# LangPleb

./: .gitignore  README.md  my_pipeline.py
LangServe-test/: README.md  input_schema.json
LangServe-test/chatdaddy/: pyproject.toml
LangServe-test/chatdaddy/app/: server.py
langserve_demos/: app.py
pipelines/: README.md  echo_bot.py  echobot.py  example.py  langserve.py  lilchain.py  lilllama.py  template.py
